--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -11,7 +11,6 @@ general {
         interval = 5
 }
 
-order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
@@ -35,7 +34,7 @@ battery all {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "Avail: %avail"
 }
 
 load {
@@ -43,7 +42,7 @@ load {
 }
 
 memory {
-        format = "%used | %available"
+        format = "| %used of %available |"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
