--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".config/emacs"]
-	path = .config/emacs
+[submodule "doomemacs"]
+	path = doomemacs
 	url = https://github.com/doomemacs/doomemacs
